# ag-ui

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: check-generated-files.yml  dojo-e2e.yml  test.yml
docs/: ag_ui.md  docs.json  integrations.mdx  introduction.mdx  overview.mdx  package.json  pnpm-lock.yaml
docs/concepts/: events.mdx
docs/development/: contributing.mdx
docs/drafts/: activity-events.mdx  generative-ui.mdx  multimodal-messages.mdx  overview.mdx  reasoning.mdx  serialization.mdx
docs/images/: left-illustration.avif
docs/quickstart/: client.mdx  clients.mdx  middleware.mdx  server.mdx
docs/sdk/go/: overview.mdx
docs/sdk/java/: overview.mdx
docs/sdk/kotlin/: overview.mdx
python-sdk/: README.md  pyproject.toml
python-sdk/ag_ui/core/: events.py  types.py
python-sdk/tests/: test_encoder.py  test_events.py  test_text_roles.py  test_types.py
sdks/community/kotlin/: .gitignore  CHANGELOG.md  LICENSE  OVERVIEW.md  PERFORMANCE.md  README.md  build.bat  build.gradle.kts  build.sh  detekt-config.yml  settings.gradle.kts
typescript-sdk/: .gitignore  create-integration.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
typescript-sdk/apps/client-cli/: package.json
typescript-sdk/apps/client-cli-example/: .gitignore  README.md  package.json  tsconfig.json
typescript-sdk/apps/dojo/: .gitignore  next.config.ts  package.json  tailwind.config.ts  tsconfig.json
typescript-sdk/integrations/a2a-middleware/: ag-ui-a2a-middleware-0.0.2.tgz  package.json
typescript-sdk/integrations/a2a-middleware/examples/: .gitignore  README.md  buildings_management.py  finance.py  it.py  orchestrator.py  pyproject.toml
typescript-sdk/integrations/adk-middleware/: .gitignore  ARCHITECTURE.md  CONFIGURATION.md  LOGGING.md  README.md  TOOLS.md  USAGE.md  package.json  quickstart.sh  requirements-dev.txt  requirements.txt  setup.py  setup_dev.sh
typescript-sdk/integrations/adk-middleware/python/examples/: README.md  pyproject.toml
typescript-sdk/integrations/adk-middleware/python/examples/other/: complete_setup.py  configure_adk_agent.py  simple_agent.py
typescript-sdk/integrations/adk-middleware/python/examples/server/: __init__.py
typescript-sdk/integrations/adk-middleware/python/examples/server/api/: __init__.py  agentic_chat.py  backend_tool_rendering.py  human_in_the_loop.py  predictive_state_updates.py  shared_state.py  tool_based_generative_ui.py
typescript-sdk/integrations/agno/: README.md  package.json
typescript-sdk/integrations/agno/examples/: .gitignore  README.md  agent.py  pyproject.toml  requirements.txt
typescript-sdk/integrations/agno/examples/server/: __init__.py
typescript-sdk/integrations/agno/examples/server/api/: __init__.py  agentic_chat.py  backend_tool_rendering.py  tool_based_generative_ui.py
typescript-sdk/integrations/crewai/: .npmignore  README.md  package.json
typescript-sdk/integrations/crewai/python/: README.md  pyproject.toml
typescript-sdk/integrations/crewai/python/ag_ui_crewai/: __init__.py  context.py  dojo.py  endpoint.py  enterprise.py  sdk.py  utils.py
typescript-sdk/integrations/crewai/python/ag_ui_crewai/examples/: agentic_chat.py  agentic_generative_ui.py  human_in_the_loop.py  predictive_state_updates.py  shared_state.py  tool_based_generative_ui.py
typescript-sdk/integrations/crewai/python/agui_crewai/: __init__.py  crews.py  dojo.py  endpoint.py  events.py  sdk.py
typescript-sdk/integrations/crewai/python/agui_crewai/examples/: shared_state.py
typescript-sdk/integrations/langgraph/: README.md  package.json
typescript-sdk/integrations/langgraph/examples/python/: README.md  langgraph.json  pyproject.toml
typescript-sdk/integrations/langgraph/examples/python/agents/: dojo.py
typescript-sdk/integrations/langgraph/examples/python/agents/agentic_chat/: agent.py
typescript-sdk/integrations/langgraph/examples/python/agents/agentic_chat_reasoning/: agent.py
typescript-sdk/integrations/langgraph/examples/python/agents/agentic_generative_ui/: agent.py
typescript-sdk/integrations/langgraph/examples/python/agents/backend_tool_rendering/: agent.py
typescript-sdk/integrations/langgraph/examples/python/agents/human_in_the_loop/: agent.py
typescript-sdk/integrations/langgraph/examples/python/agents/predictive_state_updates/: agent.py
typescript-sdk/integrations/langgraph/examples/python/agents/shared_state/: agent.py
typescript-sdk/integrations/langgraph/examples/python/agents/subgraphs/: __init__.py  agent.py
typescript-sdk/integrations/langgraph/examples/python/agents/tool_based_generative_ui/: agent.py
typescript-sdk/integrations/langgraph/python/: README.md  pyproject.toml
typescript-sdk/integrations/langgraph/python/ag_ui_langgraph/: agent.py  types.py  utils.py
typescript-sdk/integrations/langgraph/python/ag_ui_langgraph/examples/: pyproject.toml
typescript-sdk/integrations/langgraph/python/ag_ui_langgraph/examples/agents/: agentic_chat.py  agentic_generative_ui.py  dojo.py  human_in_the_loop.py  predictive_state_updates.py  shared_state.py  tool_based_generative_ui.py
typescript-sdk/integrations/llamaindex/: README.md  package.json
typescript-sdk/integrations/llamaindex/server-py/: pyproject.toml
typescript-sdk/integrations/llamaindex/server-py/server/: __init__.py
typescript-sdk/integrations/llamaindex/server-py/server/routers/: agentic_generative_ui.py  backend_tool_rendering.py  shared_state.py
typescript-sdk/integrations/mastra/: README.md  package.json  tsup.config.ts
typescript-sdk/integrations/middleware-starter/: package.json
typescript-sdk/integrations/pydantic-ai/: package.json
typescript-sdk/integrations/pydantic-ai/examples/: .gitignore  README.md  pyproject.toml
typescript-sdk/integrations/pydantic-ai/examples/server/: __init__.py
typescript-sdk/integrations/pydantic-ai/examples/server/api/: __init__.py  agentic_generative_ui.py  backend_tool_rendering.py  human_in_the_loop.py
typescript-sdk/integrations/server-starter-all-features/: package.json
(+486 files in other folders)
