tool.uv.package = true

[project]
name = "adk-middleware-examples"
version = "0.1.0"
description = "Example usage of the ADK middleware with FastAPI"
license = "MIT"

readme = "README.md"
requires-python = ">=3.9, <3.14"
dependencies = [
    "fastapi>=0.104.0",
    "httpx>=0.27.0",
    "uvicorn[standard]>=0.24.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "ag_ui_adk",
]

[project.scripts]
dev = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["server"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv.sources]
ag_ui_adk = { path = "../" }
