[tool.poetry]
name = "ag-ui-langgraph-examples"
version = "0.0.0"
description = "Examples for AGUI usage"
authors = ["Ran Shem Tov <ran@copilotkit.ai>"]
readme = "README.md"
packages = [{ include = "agents" }]

[tool.poetry.dependencies]
python = "<3.14,>=3.10"
ag-ui-langgraph = { version = "0.0.1a4", extras = ["fastapi"] }
python-dotenv = "^1.0.0"
fastapi = "^0.115.12"
uvicorn = "^0.34.3"
langchain = ">=0.3.0"
langchain-core = ">=0.1.5"
langchain-community = ">=0.0.1"
langchain-experimental = ">=0.0.11"
langchain-openai = ">=0.0.1"
langgraph = ">=0.3.25,<=0.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dev = "agents.dojo:main"